--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "Dennis Alexander Martel",
   "license": "ISC",
   "dependencies": {
+    "classnames": "^2.3.2",
     "core-js": "^3.32.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-animate-height": "^3.2.2",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0"
   },
