--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   "author": "Dennis Alexander Martel",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "core-js": "^3.32.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-animate-height": "^3.2.2",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0"
+    "react-redux": "^8.1.2",
+    "react-router-dom": "^6.15.0",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.22.10",
